force-app/main/default/objects/custom_create166__c/custom_create166__c.object-meta.xml
<CustomObject>
    <label>Custom created object166</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects166</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>