force-app/main/default/objects/custom_create166__c/fields/custom_create_166field527__c.field-meta.xml
<CustomField>
    <fullName>custom_create_166field527__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 166field527</label>
    <type>Checkbox</type>
</CustomField>